src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_plan_panel_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › What is the plan?

 See the plan panel.







                                               To-do

             agent to-do list
              1. Step 1: Analyse requirements
              2. Step 2: Implement feature
              3. Step 3: Write tests










›

 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
