src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_three_tools_one_failed_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Do the thing.

   ✓ read_file  {"path":"src/main.rs"}
   ✗ bash  {"cmd":"cargo build"}
   ✓ write_file  {"path":"out.txt"}
 Done, though one step failed.




















›

 ACT                                                                             0% (0) m off [CWD]
