src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_twelve_tools_collapsed_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Do many things.

   ▸ 12 calls · 3s
 All done!






















›

 ACT                                                             cache 0% · 0% · 0 · m  off [CWD]
