src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__startup_active_plan_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---






        sqwai 1.2.3 · /home/user/projects/myapp · main ✓ clean · test-model

        ▸ active plan   "Refactor auth module"
          step 2/5 In progress · session a8f2c1d4 · 14:02
          memory        graph ready

        ❯ type a task to start

        enter: continue plan      tab: plan / act         /help: controls











────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
