src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__startup_api_key_warning_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---






        sqwai 1.2.3 · /home/user/projects/myapp · main ✓ clean · test-model

        no active plan
        memory        graph ready
        API key not set for provider 'openai'. Set OPENAI_API_KEY or add api_key to config.

        ❯ type a task to start

        tab: plan / act           /help: controls











────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
